# WebGPU-GameEngine

./: Abstract.docx
Documentation/ProjectDocumentation/: RequirementsSpecification.docx  Time_recording.xlsx  Website_template.xlsx
Documentation/ProjectDocumentation/Meetings/: Meeting_1.docx  Meeting_2.docx
Documentation/ProjectDocumentation/Presentation/: global.d.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
Documentation/ProjectDocumentation/Presentation/public/presentation/: .gitignore  presentation.tex
Documentation/ProjectDocumentation/Presentation/public/presentation/assets/triangle/: Triangle.mov
Documentation/ProjectDocumentation/Presentation/src/: main.ts  nintendo-switch.ts
Documentation/ProjectDocumentation/Presentation/src/css/: style.css
Documentation/TechnicalDocumentation/: SystemArchitecture.docx
Documentation/UserDocumentation/: Projektbeschreibung_Vorlage_MC_A3.docx  UsersGuideAndProductDescription.docx
Documentation/Video/: readme.txt
Implementation/: Installation.docx
Implementation/ExternalComponents/: readme.txt
Implementation/ProjectFiles/: readme.txt
Implementation/SourceCode/: .gitignore  Cargo.toml  notes.md  readme.txt
Implementation/SourceCode/assets/shaders/: gltf.frag.wgsl  gltf.vert.wgsl
Implementation/SourceCode/assets/shaders/shadowMapping/: fragment.wgsl
Implementation/SourceCode/src/: app.rs  loader.rs  main.rs  triangle.rs  triangle_simple.rs
Implementation/SourceCode/src/camera/: first.rs  mod.rs  orthographic.rs  perspective.rs
Implementation/SourceCode/src/controls/: orbital.rs
(+1 files in other folders)
