[package]
name = "web-gpu-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wgpu = "0.12"
winit = "0.26"
env_logger = "0.9"
thiserror = "1.0"
pollster = "0.2"
log = "0.4"
async-trait = "0.1"
gif= "0.11"
bytemuck = { version = "1.9", features = ["derive"] }
ahash = { version = "0.7", default-features = false, optional = true }
glam = { version = "0.21", features = ["serde", "bytemuck"] }
# memoffset = "0.6"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[dependencies.gltf]
version = "1.0"
features = ["extras", "names"]